plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.beyond'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation' // 값 검증 의존성
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0' // swagger
	implementation 'org.springframework.boot:spring-boot-starter-websocket' // WebSocket
	implementation 'software.amazon.awssdk:s3:2.17.58' // S3

//	jwt 토큰 관련 라이브러리 추가
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'  // JSON 처리에 필요
	implementation 'org.springframework.boot:spring-boot-starter-security'

// Spring Security 리소스 서버 기능 활성화 (JWT 토큰을 Spring Security가 자동으로 파싱/검증하고 principal을 Jwt 객체로 제공)
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

// Spring Security JWT 파싱·검증(JWS/JWE) 지원 라이브러리 (리소스 서버에서 JWT를 다루기 위해 반드시 필요)
	implementation 'org.springframework.security:spring-security-oauth2-jose'


//	redis 관련 의존성 추가
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-cache' // 캐싱처리를 위한 의존성

//	gmail 인증번호를 받기 위한 의존성 추가
	implementation 'org.springframework.boot:spring-boot-starter-mail'

//	ObjectMapper에 java의 시간타입(LocalTime 등)을 직렬화/역직렬화를 가능하게 하는 의존성
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	// 테스트용
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'


}

tasks.named('test') {
	useJUnitPlatform()
}
